--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,12 +8,20 @@ on:
       - "src/**"
       - "tests/**"
       - ".github/workflows/**"
+      - "pyproject.toml"
+      - "uv.lock"
+      - "!.gitignore"
+      - "!README.md"
   pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
     paths:
       - "src/**"
       - "tests/**"
       - ".github/workflows/**"
+      - "pyproject.toml"
+      - "uv.lock"
+      - "!.gitignore"
+      - "!README.md"
 
 jobs:
   test:
