fix: update known-first-party configuration in ruff.toml

--- a/ruff.toml
+++ b/ruff.toml
@@ -51,8 +51,8 @@ unfixable = []
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-[lint.isort]
-known-first-party = ["cbct","aip","cia","scan","tracing","cdx_interface","task_scheduler"]
+# [lint.isort]
+# known-first-party = ["src"]
 
 [lint.mccabe]
 # Flag errors (`C901`) whenever the complexity level exceeds 18.
