refactor: fetch latest changes from origin before checking branch status

--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -22,6 +22,7 @@ jobs:
 
     - name: check if branch is ahead of main
       run: |
+        git fetch origin
         if ! git merge-base --is-ancestor origin/main ${{ github.event.pull_request.head.sha }};
         then echo "This branch is not up to date with main";
         exit 1; fi
