refactor: enhance pre-commit workflow to check if branch is ahead of main

--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -5,9 +5,25 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
+  check_if_branch_is_ahead_of_main:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Check if branch is ahead of main
+        run: |
+          if ! git merge-base --is-ancestor origin/main ${{ github.event.pull_request.head.sha }};
+          then echo "This branch is not up to date with main";
+          exit 1; fi
+
   test:
+    needs: check_if_branch_is_ahead_of_main
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -19,13 +35,6 @@ jobs:
       uses: actions/setup-python@v5
       with:
           python-version: '3.10'
-
-    - name: check if branch is ahead of main
-      run: |
-        git fetch origin
-        if ! git merge-base --is-ancestor origin/main ${{ github.event.pull_request.head.sha }};
-        then echo "This branch is not up to date with main";
-        exit 1; fi
 
     - name: Changed files
       id: changed_files
