--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10,<3.11"
 dependencies = [
-    "fastapi[standard]>=0.112.1",
-    "uvicorn==0.30.5",
-    "pydantic-settings==2.3.4"
+    "fastapi[standard]>=0.124.4",
+    "uvicorn==0.38.0",
+    "pydantic-settings==2.12.0",
+    "sqlmodel~=0.0.27",
 ]
 
 [dependency-groups]
