--- a/.github/workflows/openapi-spec.yaml
+++ b/.github/workflows/openapi-spec.yaml
@@ -2,22 +2,22 @@ name: Generate OpenAPI Spec and Diff
 
 on:
   pull_request:
-    types: [ opened, synchronize, reopened, ready_for_review ]
+    types: [ labeled ]
     branches:
       - main
     paths:
       - "src/api/**"
       - "src/schemas.py"
+      - "src/models.py"
       - ".github/workflows/openapi-spec.yml"
 jobs:
   generate-openapi:
     permissions:
       contents: read
       pull-requests: write
-
+    # run the job only if the label is `openapi-spec` and would skip if the label is anything else.
+    if: ${{ github.event.label.name == 'openapi-spec' }}
     runs-on: ubuntu-latest
-    env:
-      ENV_FILE: .env
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -74,14 +74,7 @@ jobs:
         run: |
           git fetch origin ${{ github.base_ref }}
           git checkout origin/${{ github.base_ref }}
-          # TODO: the script is not on master yet, so we generate the spec directly here.
-          # Once the script is merged, we can use it here as well.
-          PYTHONPATH=src uv run python -c "
-          from main import app
-          import json
-          with open('openapi.json', 'w') as f:
-              json.dump(app.openapi(), f, indent=2)
-          "
+          PYTHONPATH=src uv run python scripts/generate_openapi.py
           mv openapi.json openapi-base.json
 
       - name: Generate PR spec
