--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ PORT=8080
 # Database Configuration
 DATABASE_URL=sqlite:///database.db
 # DATABASE_URL=postgresql://develop:develop_secret@localhost:5432/develop
+# if use service-api in Docker Compose
+# DATABASE_URL=postgresql://develop:develop_secret@db:5432/develop
 
 # Logging Configuration
 LOG_LEVEL=INFO
