--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   service-api:
     build:
       context: .
@@ -16,4 +17,49 @@ services:
       timeout: 10s
       start_period: 30s
       retries: 3
+    depends_on:
+      db:
+        condition: service_healthy
+      migration:
+        condition: service_completed_successfully
+    networks:
+      - service-network
     restart: unless-stopped
+
+  db:
+    image: public.ecr.aws/docker/library/postgres
+    ports:
+        - '5432:5432'
+    restart: always
+    environment:
+        POSTGRES_USER: develop
+        POSTGRES_PASSWORD: develop_secret
+        POSTGRES_DB: develop
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U develop" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - service-network
+
+  migration:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: migration-runner
+    command: python src/migration_cli.py
+    environment:
+      LOG_LEVEL: "DEBUG"
+    volumes:
+      - $PWD/.env:/usr/app/.env
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - service-network
+    restart: "no"
+
+networks:
+  service-network:
+    driver: bridge
