--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-settings==2.12.0",
     "sqlmodel~=0.0.27",
     "alembic>=1.17.2,<2.0.0",
+    "psycopg2-binary>=2.9.10,<3.0.0",
 ]
 
 [dependency-groups]
@@ -17,7 +18,6 @@ dev = [
     "pytest>=8.3.4",
     "ruff>=0.8.4",
     "pre-commit~=4.2.0",
-    "fire>=0.7.1",
 ]
 
 [tool.pytest.ini_options]
