--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,9 @@ services:
     networks:
       - service-network
     restart: unless-stopped
+    profiles:
+      - all
+      - app
 
   db:
     image: public.ecr.aws/docker/library/postgres
@@ -42,6 +45,10 @@ services:
       retries: 5
     networks:
       - service-network
+    profiles:
+      - all
+      - db
+      - dependencies
 
   migration:
     build:
@@ -59,6 +66,9 @@ services:
     networks:
       - service-network
     restart: "no"
+    profiles:
+      - all
+      - dependencies
 
 networks:
   service-network:
