--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "sqlmodel~=0.0.27",
     "alembic>=1.17.2,<2.0.0",
     "psycopg2-binary>=2.9.10,<3.0.0",
+    "uuid-utils>=0.12.0"
 ]
 
 [dependency-groups]
