--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.3.4",
+    "pytest-mock>=3.15.1",
     "ruff>=0.8.4",
     "pre-commit~=4.2.0",
 ]
