feat: add minimal database setup with SQLite and PostgreSQL support and CRUD operations example (#5)

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,16 @@ SERVICE_NAME="FastAPI Service"
 HOST=0.0.0.0
 PORT=8080
 
+# Database Configuration
+DATABASE_URL=sqlite:///database.db
+# DATABASE_URL=postgresql://develop:develop_secret@localhost:5432/develop
+# if use service-api in Docker Compose
+# DATABASE_URL=postgresql://develop:develop_secret@db:5432/develop
+
 # Logging Configuration
 LOG_LEVEL=INFO
 LOG_SAVE_ON_FILE=false
+LOG_DATABASE_QUERIES=false
 
 # Authentication and Authorization
 API_KEY=your-secret-api-key-here
