--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,21 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10,<3.11"
 dependencies = [
-    "fastapi[standard]>=0.112.1",
-    "uvicorn==0.30.5",
-    "pydantic-settings==2.3.4"
+    "fastapi[standard]>=0.124.4",
+    "uvicorn==0.38.0",
+    "pydantic-settings==2.12.0",
+    "sqlmodel~=0.0.27",
+    "alembic>=1.17.2,<2.0.0",
+    "psycopg2-binary>=2.9.10,<3.0.0",
+    "uuid-utils>=0.12.0"
 ]
 
 [dependency-groups]
 dev = [
     "pytest>=8.3.4",
+    "pytest-mock>=3.15.1",
     "ruff>=0.8.4",
-    "pre-commit~=4.2.0"
+    "pre-commit~=4.2.0",
 ]
 
 [tool.pytest.ini_options]
@@ -22,3 +27,10 @@ pythonpath = [
     "src",
     "tests"
 ]
+
+[tool.uv]
+package = true
+
+[project.scripts]
+migrate-db = "utils.cli.migration:main"
+dc = "utils.cli.docker_compose:main"
